# comfyui-jupyter

./: LICENSE  README-ja.md  README.md  __init__.py  pyproject.toml  requirements.txt  specification.md  specification2.md
comfyui_kernel/: __main__.py  kernel.py  proxy.py
docs/: roadmap.md
kernel/: kernel.json
scripts/: install_kernel.py  place_kernel.sh
web/: jupyter_client_id.js  jupyter_function.css  jupyter_function.js  jupyter_trigger_queue.js
