[project]
name = "comfyui-jupyter-kernel"
version = "0.1.0"
description = "Jupyter kernel for ComfyUI - execute Python with access to ComfyUI variables"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfyui_kernel"]
