[project]
name = "comfyui-jupyter-kernel"
version = "0.1.0"
description = "Jupyter kernel for ComfyUI - execute Python with access to ComfyUI variables"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfyui_kernel"]

# Standalone resolver context — `target/pyproject.toml` upstream declares a
# PyTorch-nightly index that pulls in cp314-only wheels and breaks our cp312
# venv. The empty workspace + explicit default index pin keeps this kernel's
# resolution on plain PyPI.
[tool.uv.workspace]
members = []

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
